--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ Django==2.2.7
 django-heroku==0.3.1
 django-service-objects==0.5.0
 djangorestframework==3.11.0
+gunicorn==20.0.4
 psycopg2==2.8.4
+Pygments==2.5.2
 pytz==2019.3
 six==1.13.0
 sqlparse==0.3.0
