--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,40 @@
+amqp==2.5.2
+appdirs==1.4.3
+attrs==19.3.0
+billiard==3.6.1.0
+black==19.10b0
+celery==4.4.0
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
 dj-database-url==0.5.0
 Django==2.2.7
 django-heroku==0.3.1
 django-service-objects==0.5.0
+django-templated-mail==1.1.1
 djangorestframework==3.11.0
+djoser==2.0.3
+docopt==0.6.2
 gunicorn==20.0.4
+idna==2.8
+importlib-metadata==1.3.0
+isort==4.3.21
+kombu==4.6.7
+more-itertools==8.0.2
+pathspec==0.6.0
+pip-api==0.0.13
+pipreqs==0.4.10
 psycopg2==2.8.4
 Pygments==2.5.2
 pytz==2019.3
+regex==2019.12.20
+requests==2.22.0
 six==1.13.0
 sqlparse==0.3.0
+toml==0.10.0
+typed-ast==1.4.0
+urllib3==1.25.7
+vine==1.3.0
 whitenoise==5.0.1
+yarg==0.1.9
+zipp==0.6.0
